tests/negative/export_cyclic5_b.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

import .export_cyclic5_c
export *
